--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -4,15 +4,28 @@
 {% block content %}
 
 <center>
+    <br>
+    <br>
     <h1>Add Category</h1>
     <br>
-        <form action="" method="POST">
+    <div class="container col-6">
+        {% if submitted %}
+            Your Recipe was Submitted Succesfully!
+        {% else %}
+        <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
+            {{ form.media }}
 
             {{ form.as_p }}
 
             <input type="submit" value="Add Category" class="btn btn-outline-secondary">
-        </form>    
+        </form>
+        {% endif %} 
+    </div>
     </center>
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 {% endblock content %}
