--- a/templates/template.html
+++ b/templates/template.html
@@ -1,8 +1,21 @@
 {% extends 'base.html' %} 
+{% block title %}{% endblock %}
 {% load static %}
+
+
 
 {% block content %}
 
+<div class="container">
 
 
+
+    
+
+    
+
+    <a href="{% url 'home' %}" class="btn btn-sm btn-outline-success">Home</a>
+
+
+</div>
 {% endblock content %}
