Update functionality added to my recipe list page

--- a/templates/recipe_mylist.html
+++ b/templates/recipe_mylist.html
@@ -31,6 +31,7 @@
                 <p>Author: {{ recipe.author }}</p>     
   
                 <a href="{% url 'recipe-edit' recipe.pk %}" class="btn btn-sm btn-outline-success"><span>Edit</span></a>
+                <a href="{% url 'recipe-update' recipe.pk %}" class="btn btn-sm btn-outline-success"><span>Update</span></a>
                 <a href="#" class="btn btn-sm btn-outline-danger"><span>Delete</span></a>
               </div>
             </div>
