--- a/templates/recipe_update.html
+++ b/templates/recipe_update.html
@@ -7,27 +7,27 @@
 {% block content %}
 
 <div class="container">
-
-
+    <br>
     <h4>Edit Recipe: {{ recipe.recipe_title }} </h4>
+    <br>
+    <p>In Category: {{ recipe.category }}</p> 
     <small>By: {{ recipe.author }}</small><br/>
     <small>Created: {{ recipe.created_date }}, </small> 
     <small>Last Updated: {{ recipe.updated_date }}, </small>
     <hr>
-    <p>Categoru: {{ recipe.category }}</p>
+    
     <br>
     <form action="" method="POST">
 
         {% csrf_token %}
         {{ form.as_p }}
-
+    
+        <br>
+        <a href="{% url 'recipe_mylist' %}" class="btn btn-sm btn-outline-success">Back</a>
+        <a href="{% url 'home' %}" class="btn btn-sm btn-outline-success">Home</a>
+    <input type="submit" value="Update" class="btn btn-sm btn-outline-success">
 
     </form>
-
-    
-
-    <a href="{% url 'home' %}" class="btn btn-sm btn-outline-success">Home</a>
-
 
 </div>
 {% endblock content %}
