Delete functionality added to MyRecipes list

--- a/templates/recipe_mylist.html
+++ b/templates/recipe_mylist.html
@@ -32,7 +32,7 @@
   
                 <a href="{% url 'recipe-edit' recipe.pk %}" class="btn btn-sm btn-outline-success"><span>Edit</span></a>
                 <a href="{% url 'recipe-update' recipe.pk %}" class="btn btn-sm btn-outline-success"><span>Update</span></a>
-                <a href="#" class="btn btn-sm btn-outline-danger"><span>Delete</span></a>
+                <a href="{% url 'recipe_delete' recipe.pk %}" class="btn btn-sm btn-outline-danger"><span>Delete</span></a>
               </div>
             </div>
           </div>
