--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
 
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
             </div>
           </li>
           <!-- Nav Links visible when User is authenticated -->
@@ -79,7 +79,7 @@
 
                 <li class="nav-item nav-link-s">
                   <div class="nav-item-s">
-                    <a class="nav-link nav-link-drop" href="{% url 'add_recipe' %}"> Add Recipe Old</a>
+                    <a class="nav-link nav-link-drop" href="{% url 'add_recipe' %}"> Add Recipe</a>
                   </div>
                 </li>
 
