--- a/templates/recipe_update.html
+++ b/templates/recipe_update.html
@@ -8,6 +8,10 @@
 
 <div class="container">
     <br>
+    Logged in {{ user }}
+    <br>
+    Autor: {{ recipe.author }}
+    <br><br>
     <h4>Edit Recipe: {{ recipe.recipe_title }} </h4>
     <br>
     <p>In Category: {{ recipe.category }}</p> 
