--- a/templates/recipe_add.html
+++ b/templates/recipe_add.html
@@ -8,7 +8,8 @@
 
 <div class="container">
 
-
+    <h2>{{ user.username }}'s Area</h2>
+    <br/><br/><br/>
     <h4>Add Recipe2</h4>
 
     <form action="" method="POST" enctype="multipart/form-data">
