--- a/templates/DEL_add_recipe.html
+++ b/templates/DEL_add_recipe.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %} 
+{% block title %}Add Recipe{% endblock %}
 {% load static %}
 
 {% block content %}
+
     <div class="container">
+        <br>
+        <br>
         <h2>{{ user.username }}'s Area</h2>
-        <br/><br/><br/>
+        <br>
+        <br>
         <center>
-        <br>
-        <br>
         <h1>Add Recipe</h1>
         <br>
         <div class="container col-6">
@@ -20,8 +23,11 @@
                     
                     {{ form.as_p }}
 
-                    <input type="submit" value="Add Recipe" class="btn btn-outline-secondary">
+                    <input type="submit" value="Add Recipe" class="btn btn-outline-warning">
+                    <a href="{% url 'home' %}" class="btn btn-outline-success">Home</a>
                 </form>
+                <br>
+                
             {% endif %}  
         </div>
         </center>
