--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,12 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- jQuery -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" 
+  integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" 
+  integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -67,69 +73,83 @@
             <div class="nav-item-s">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Recipes
+                {{ user }}   <i class="fa-solid fa-user fa-xs"></i>
               </a>
               <ul class="dropdown-menu">
 
                 <li class="nav-item nav-link-s">
                   <div class="nav-item-s">
-                    <a class="nav-link nav-link-drop" href="{% url 'recipe_mylist' %}"> My Recipes </a>
+                    <a class="nav-link nav-link-drop" href="{% url 'recipe-mylist' %}"> My Recipes </a>
                   </div>
                 </li>
 
                 <li class="nav-item nav-link-s">
                   <div class="nav-item-s">
-                    <a class="nav-link nav-link-drop" href="{% url 'add_recipe' %}"> Add Recipe</a>
+                    <a class="nav-link nav-link-drop" href="{% url 'add-recipe' %}"> Add Recipe</a>
                   </div>
                 </li>
 
-                <li class="nav-item nav-link-s">
-                  <div class="nav-item-s">
-                    <a class="nav-link nav-link-drop" href="{% url 'recipe-add' %}"> Add Recipe New </a>
-                  </div>
-                </li>
-
+                <!-- TO BE REMOVED -->
+                <hr>
                 <li class="nav-item nav-link-s">
                   <div class="nav-item-s">
                     <a class="nav-link nav-link-drop" href="{% url 'add-category' %}">Add Category</a>
                   </div>
                 </li>
-                <!-- TO BE REMOVED -->
+
                 <li class="nav-item nav-link-s">
                   <div class="nav-item-s">
-                    <a class="nav-link nav-link-drop" href="/admin">Admin</a>
+                      <a class="nav-link nav-link-drop" href="/admin"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Admin</a>
                   </div>
                 </li>
+                <hr>
+
+                <!-- Visible for Admin only -->
+                {% if user.is_superuser %}
+                <hr>
+                <li class="nav-item nav-link-s">
+                  <div class="nav-item-s">
+                    <a class="nav-link nav-link-drop" href="{% url 'add-category' %}">Add Category</a>
+                  </div>
+                </li>
+
+                <li class="nav-item nav-link-s">
+                  <div class="nav-item-s">
+                      <a class="nav-link nav-link-drop" href="/admin"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Admin</a>
+                  </div>
+                </li>
+
+                {% endif %}
+                          
+                <li class="nav-item nav-link-s">
+                  <div class="nav-item-s">
+                    <a class="nav-link" href="{% url 'account_logout' %}">Logout  <i class="fa-solid fa-right-from-bracket fa-beat-fade fa-xs"></i></a>
+                  </div>
+                </li>
+                
               </ul>
             </div>
           </li>
-          <li class="nav-item nav-link-s">
+          <!-- <li class="nav-item nav-link-s">
             <div class="nav-item-s">
-              <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+              <a class="nav-link" href="{% url 'account_logout' %}"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
             </div>
-          </li>
+          </li> -->
 
           {% else %}
 
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
-              <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+              <a class="nav-link" href="{% url 'account_signup' %}">Register <i class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
             </div>
           </li>
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
-              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+              <a class="nav-link" href="{% url 'account_login' %}">Login <i class="fa-solid fa-arrow-right-to-bracket fa-beat-fade fa-xs"></i></a>
             </div>
           </li>
 
           {% endif %}
-
-          <!-- Nav Bar Links continues after Links only visible when User is authenticated -->
-          <li class="nav-item nav-link-s">
-            <div class="nav-item-s">
-              <a class="nav-link active" aria-current="page" href="#">Start here</a>
-            </div>
-          </li>
 
         </ul>
       </div>
@@ -158,7 +178,7 @@
     </div>
   </div>
 
-  <main class="flex-shrink-0 main-bg">
+  <main class="flex-shrink-0 main-bg">   
     {% block content %}
     <!--  Block Recipe Column -->
     {% endblock content %}
@@ -199,6 +219,9 @@
     alert.close();
   }, 3000);
 </script>
+
+<!-- Font Awsome -->
+<script src="https://kit.fontawesome.com/d1f1e1791a.js" crossorigin="anonymous"></script>
 
 <!-- GSAP Library: https://cdnjs.com/libraries/gsap -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
