--- a/templates/recipe_add.html
+++ b/templates/recipe_add.html
@@ -2,28 +2,40 @@
 {% block title %}Add Recipe{% endblock %}
 {% load static %}
 
-
-
 {% block content %}
 
 <div class="container">
 
     <h2>{{ user.username }}'s Area</h2>
-    <br/><br/><br/>
-    <h4>Add Recipe2</h4>
+    <br>
+    <div class="container col-6">
+        {% if submitted %}
+            <center>
+                <br>
+                <br>
+                <h5>Your Recipe was Submitted Succesfully {{ user }}!</h5>
+                <br>
+                <br>
+                <a href="{% url 'home' %}" class="btn btn-outline-success">Home</a>
+                <a href="{% url 'recipe-mylist' %}" class="btn btn-outline-success">My Recipes</a>
+            </center>
+            
+        {% else %}
+        <br/><br/><br/>
+        <h1>Add Recipe</h1>
+            <form action="" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.media }}
+                
+                {{ form.as_p }}
 
-    <form action="" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.media }}
-        
-        {{ form.as_p }}
-
-        <input type="submit" value="Add Recipe" class="btn btn-outline-secondary">
-    </form>
-
-    
-
-    <a href="{% url 'home' %}" class="btn btn-sm btn-outline-success">Home</a>
+                <input type="submit" value="Add Recipe" class="btn btn-outline-warning">
+                <a href="{% url 'home' %}" class="btn btn-outline-success">Home</a>
+            </form>
+            <br>
+            
+        {% endif %}  
+    </div>
 
 
 </div>
