--- a/templates/recipe_update.html
+++ b/templates/recipe_update.html
@@ -27,7 +27,7 @@
         {{ form.as_p }}
     
         <br>
-        <a href="{% url 'recipe_mylist' %}" class="btn btn-sm btn-outline-success">Back</a>
+        <a href="{% url 'recipe-mylist' %}" class="btn btn-sm btn-outline-success">Back</a>
         <a href="{% url 'home' %}" class="btn btn-sm btn-outline-success">Home</a>
     <input type="submit" value="Update" class="btn btn-sm btn-outline-success">
 
