--- a/templates/recipe_list_by_category.html
+++ b/templates/recipe_list_by_category.html
@@ -3,17 +3,12 @@
 
 {% block content %}
 
-<br>
 <div class="container col-lg-8 offset-lg-2 col-10">
-  <h4>Categories</h4>
   <br>
-
-
-  <hr>
+  <h4>View by {{ category }} Category</h4>
   <br>
-  <h4>Recipes</h4>
   <br>
-  {% for recipe in object_list %}
+  {% for recipe in category_recipes %}
 
   <div class="card mb-3">
     <div class="row gy-1">
@@ -82,4 +77,5 @@
 </nav>
 {% endif %}
 </div>
+
 {% endblock %}
