uploaded hero pictures, html to index.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,9 +108,13 @@ a {
 
 
 
+/* INDEX */
+/* HERO */
+.hero-logo {
+    z-index: 20;
+}
 
 /* Carousel  */
-
 .carousel-inner {
     max-height: 600px;
 }
