--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,36 @@
 
 <h1>Welcome Page</h1>
 
+
+<section>
+  <div class="hero">
+    <img src="/media/pictures/welcome-hero.jpg" alt="Welcome hero picture">
+    <h1>Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h1>
+    <a class="navbar-brand" href="{% url 'home' %}">
+      <span class="brand-logo headline">Shemmylicious</span>
+      <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679654869/media/Shemmylicious/food_sjzw1x.png"
+        alt="Shemmylicious Food Sign" height="70">
+    </a>
+  </div>
+</section>
+
+<div class="index-slider"></div>
+
+
+
+
 <div class="container col-lg-8 offset-lg-2 col-10">
 
   <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="{% static '/img1.jpg' %}" class="d-block w-100" alt="carousel random image">
+        
+        <div class="hero-logo">
+          <span class="brand-logo">Shemmylicious</span>
+          <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679654869/media/Shemmylicious/food_sjzw1x.png"
+            alt="Shemmylicious Food Sign" height="70">
+        </div>
+        <img src="{% static '/images/welcome-hero2.jpg' %}" class="d-block w-100" alt="carousel random image">
       </div>
       {% for slide in slider %}
             <!-- Slides -->
