--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,33 @@
 
 <section>
   <div class="hero">
-    <img src="/media/pictures/welcome-hero.jpg" alt="Welcome hero picture">
-    <h1>Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h1>
-    <a class="navbar-brand" href="{% url 'home' %}">
-      <span class="brand-logo headline">Shemmylicious</span>
-      <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679654869/media/Shemmylicious/food_sjzw1x.png"
-        alt="Shemmylicious Food Sign" height="70">
-    </a>
+    <img src="{% static '/images/welcome-hero2.jpg' %}" id="food-img" alt="Welcome hero picture">
+    <div class="headline">
+      <h1>Cooking Time Is <br> My Favorite Time <i class="far fa-heart"></i></h1>
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <span class="brand-logo">Shemmylicious</span>
+        <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679654869/media/Shemmylicious/food_sjzw1x.png"
+          alt="Shemmylicious Food Sign" height="90">
+      </a>
+    </div>
   </div>
 </section>
 
 <div class="index-slider"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
