--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,7 @@ a {
     font-size: 2.3rem;
     font-weight: 700;
     color: #45575A;
+    margin-left: 20px;
 }
 
 .nav-link-s {
@@ -121,9 +122,8 @@ a {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
-    z-index: -1;
-    background: linear-gradient(to right, #8EC63F, #0E9A45 );
+    min-height: 130vh;
+    background: linear-gradient(to right, #fff, #8EC63F, #0E9A45 );
 }
 
 section {
@@ -137,6 +137,7 @@ section {
     height: 60%;
     width: 100%;
     position: relative;
+    z-index: 1;
 }
 
 .hero::after {
@@ -184,13 +185,17 @@ section {
 /*---------------------------------------
              Carousel  
 ---------------------------------------*/
+.container {
+    position: relative;
+}
+
 .carousel-inner {
     max-height: 600px;
 }
 
 .carousel-inner img {
     background-size: cover ;
-    overflow-y: hidden;
+    object-fit: cover;
     height: auto;
 }
 
@@ -233,9 +238,16 @@ section {
     margin-top: 3px;
     padding: 0 5px;
     margin: 4px;
-
 }
 
+.inner-text {
+    position: absolute;
+    align-items: center;
+    text-align: center;
+    top: 10px;
+    left: 10px;
+    display: flex;
+}
 
 
 /*---------------------------------------
@@ -426,7 +438,7 @@ img {
 
 
 /*---------------------------------------
-             MEDIA 
+             MEDIA max-width: 760px
 ---------------------------------------*/
 
 @media screen and (max-width: 760px) {
@@ -435,7 +447,54 @@ img {
     }
     
     .headline .brand-logo {
+        font-size: 150%;
         margin-left: 100px;
+    }
+
+    .headline img {
+        height: 60px;
+    }
+
+    .inner-text {
+        position: unset;
+        display: inline;
+        padding-top: 100px;
+    }
+}
+
+
+
+/*---------------------------------------
+             MEDIA (max-width: 360px
+---------------------------------------*/
+
+@media screen and (max-width: 460px) {
+    .headline h1 {
+        font-size: 150%;
+    }
+    
+    .headline .brand-logo {
+        font-size: 90%;
+        margin-left: 50px;
+    }
+
+    .headline img {
+        height: 40px;
+    }
+
+    .navbar-brand .brand-logo {
+        font-size: 110%;
+        margin-left: 10px;
+        padding-left: 0;
+    }
+
+    .navbar-brand img {
+        height: 50px;
+    }
+
+    input,
+    button {
+        height: 35px;
     }
 
 }
