tweaked app for Heroku

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,7 +185,7 @@ section {
 /*---------------------------------------
              Carousel  
 ---------------------------------------*/
-.container {
+.container-carosel {
     position: relative;
 }
 
