--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,17 @@
 </section>
 <div class="index-slider"></div>
 
-<div class="container container-fluid">
+<div class="container container-carosel container-fluid">
 
   <div class="inner-text col-12 col-md-3 offset-7">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sequi alias numquam eos, tenetur perspiciatis harum eum nihil provident recusandae cum animi fugit veritatis nobis illo atque quam repellendus quo.
+    <h1>About Autor</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sequi alias numquam eos, tenetur perspiciatis harum eum nihil provident recusandae cum animi fugit veritatis nobis illo atque quam repellendus quo.
+    </p>
+    
+    <a href="#">Register</a>
   </div>
   
+
   <div id="carouselExampleInterval" class="carousel slide col-12 col-md-6 offset-md-1 col-10" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">        
