--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,6 +138,9 @@ section {
     width: 100%;
     position: relative;
     z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero::after {
@@ -166,6 +169,26 @@ section {
     padding: 3%;
     border-radius: 8px;
     color: white;
+    z-index: 0;
+}
+
+.headline-bttn-container {
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.headline-bttn {
+    min-width: 200px;
+    height: 40px;
+    background-color: #9a99a2bd;
+    padding: 10% auto;
+    color: white;
+    font-size: 120%;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
     z-index: 0;
 }
 
@@ -466,6 +489,14 @@ img {
         position: absolute;
         top: 50%;
         left: 50%;
+    }
+
+    .headline-bttn {
+        min-width: 200px;
+        height: 35px;
+        padding: 5% auto;
+        font-size: 100%;
+        margin-top: 5px;
     }
 
     /*---------------------------------------
