--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
 
 <section>
   <div class="hero">
+
     <img src="{% static '/images/welcome-hero2.jpg' %}" id="food-img" alt="Welcome hero picture">
+
     <div class="headline">
       <h1>Cooking Time Is <br> My Favorite Time <i class="far fa-heart"></i></h1>
       <a class="navbar-brand" href="{% url 'home' %}">
@@ -13,6 +15,21 @@
           alt="Shemmylicious Food Sign" height="90">
       </a>
     </div>
+
+    <div class="headline-bttn-container">
+      {% if user.is_authenticated %}
+
+      <a href="#" class="btn btn-sm btn-outline-light headline-bttn">Browse Recipes</a>
+
+      {% else %}
+
+      <a href="{% url 'account_signup' %}" class="btn btn-sm btn-outline-light headline-bttn">Register   <i class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
+      <a href="{% url 'account_login' %}" class="btn btn-sm btn-outline-light headline-bttn" >Login   <i class="fa-solid fa-arrow-right-to-bracket fa-beat-fade fa-xs"></i></a> 
+
+      {% endif %}
+
+    </div>
+
   </div>
 </section>
 <div class="index-slider"></div>
@@ -24,7 +41,6 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sequi alias numquam eos, tenetur perspiciatis harum eum nihil provident recusandae cum animi fugit veritatis nobis illo atque quam repellendus quo.
     </p>
     
-    <a href="#">Register</a>
   </div>
   
 
